Letrero de no hay peliculas favoritas

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
     <div class="liked-header">
       <h2 class="liked-title">Favorite movies</h2>
     </div>
+    <h2 class="liked-movieList-h2 inactive">No favorite movies</h2>
     <article class="liked-movieList">
-      <div class="movie-container">
+      <!-- <div class="movie-container">
         <img src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg" class="movie-img" alt="Nombre de la película" />
       </div>
       <div class="movie-container">
@@ -71,7 +72,7 @@
       </div>
       <div class="movie-container">
         <img src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg" class="movie-img" alt="Nombre de la película" />
-      </div>
+      </div> -->
     </article>
   </section>
 
